# haskell-language-server

./: cabal.project
ghcide/src/Development/IDE/: Main.hs  Plugin.hs
ghcide/src/Development/IDE/Core/: Rules.hs
ghcide/src/Development/IDE/GHC/Compat/: Env.hs
ghcide/src/Development/IDE/Plugin/: HLS.hs
ghcide/src/Development/IDE/Types/: Options.hs
hls-plugin-api/src/Ide/: Types.hs
plugins/hls-tags-plugin/: CHANGELOG.md  hls-tags-plugin.cabal  tags.mtime
plugins/hls-tags-plugin/src/Ide/Plugin/: Tags.hs
