cabal-version:      3.0
name:               hls-tags-plugin
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Marcin Szamotulski
maintainer:         coot@coot.me
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ide.Plugin.Tags
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      ghcide,
                      hls-plugin-api,
                      ghc-tags-plugin
    hs-source-dirs:   src
    default-language: Haskell2010
